resources/kubernetes/deploy-um.yml
apiVersion: v1
kind: Service
metadata:
  name: umserver-0
  labels:
    app.kubernetes.io/name: universalmessaging
    app.kubernetes.io/instance: umserver
    app.kubernetes.io/version: "11.1"
spec:
  selector:
    statefulset.kubernetes.io/pod-name: umserver-0
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: nsp
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: metrics
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: umserver
  labels:
    app.kubernetes.io/name: universalmessaging
    app.kubernetes.io/instance: umserver
    app.kubernetes.io/version: "11.1"
spec:
  replicas: 1
  serviceName: umserver
  selector:
    matchLabels:
      app.kubernetes.io/name: universalmessaging
      app.kubernetes.io/instance: umserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: universalmessaging
        app.kubernetes.io/instance: umserver
    spec:
      imagePullSecrets:
        - name: ibm-regcred
      serviceAccountName: umserver-sa      
      containers:
        - name: umserver   
          image: "cp.icr.io/cp/webmethods/universalmessaging/universalmessaging-server:11.1.1"
          imagePullPolicy: Always
          ports:
            - name: nsp
              containerPort: 9000
              protocol: TCP
            - name: metrics
              containerPort: 9200
              protocol: TCP              
          volumeMounts:
          - name: data
            mountPath: /opt/softwareag/UniversalMessaging/server/umserver/data
          - name: logs
            mountPath: /opt/softwareag/UniversalMessaging/server/umserver/logs
          - name: configuration
            mountPath: /opt/softwareag/common/conf    
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health/
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/
              port: 9000
            initialDelaySeconds: 0
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/
              port: 9000
            initialDelaySeconds: 0
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: logs
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: configuration
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Mi
